# Stellar-Game-Studio

./: Cargo.toml  Front-Guide.md  PASS-MASTERMIND-ARCHITECTURE.md  PASS-MASTERMIND-README.md  PASS_INTEGRATION_FINAL.md  README.md  contract-guide.md  generate-vk.mjs  guide.md  package-lock.json  package.json
contracts/pass/: Cargo.toml  Nargo.toml  Prover.toml  README.md  dockerfile-vk
contracts/pass/src/: lib.rs  main.nr  test.rs
pass-frontend/: API_USAGE_EXAMPLES.md  BEFORE_AFTER.md  Guide-final.md  Guide-zk.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_DOCS.md  README_IMPLEMENTATION.md  index.html  package-lock.json  package.json  vite.config.ts
pass-frontend/src/: App.tsx  config.ts
pass-frontend/src/games/pass/: CONTRACT_INTEGRATION.md  GAME_FLOW.md  INTEGRATION_COMPLETE.md  INTEGRATION_FLOW.md  INTEGRATION_SUMMARY.md  PassGame.tsx  PassGameDemo.tsx  README_DARK_UI.md  bindings.ts  circuit.json  passService.ts  vk
pass-frontend/src/games/pass/components/: PassDarkUI.tsx  PassStateIndicator.tsx  PassWinOverlay.tsx  index.ts
pass-frontend/src/games/pass/hooks/: useLocalGameSession.ts
pass-frontend/src/games/pass/styles/: PassDarkTheme.css
pass-frontend/src/games/pass/utils/: proofCalculator.ts  test_circuit.js
pass-frontend/src/utils/: constants.ts
scripts/: bindings.ts  deploy.ts
sgs_frontend/src/components/: Resources.tsx
