[workspace]
resolver = "2"
version = "0.1.2"
members = [
  "contracts/mock-game-hub",
  "contracts/twenty-one",
  "contracts/number-guess",
  "contracts/dice-duel",
  "contracts/pass",
]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "acffbbd45be6a0a551146eebfc268d6f95078246" }
ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/rs-soroban-ultrahonk", branch = "main" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release.package."*"]
overflow-checks = false
opt-level = "s"

[patch.crates-io]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "acffbbd45be6a0a551146eebfc268d6f95078246" }
